deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: clinq-bridge-csv
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: clinq-bridge-csv
    spec:
      containers:
        - name: clinq-bridge-csv
          image: gcr.io/clinq-ai/clinq-bridge-csv:TAG
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
          readinessProbe:
            httpGet:
              path: /health
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
