service.yml
apiVersion: v1
kind: Service
metadata:
  name: clinq-bridge-csv
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: clinq-bridge-csv
